--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
 # OSX
-#
 .DS_Store
 
 # Xcode
 #
-build/
+# gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
+
+## Build generated
+android/build/
+DerivedData
+
+## Various settings
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -14,28 +19,57 @@ build/
 *.perspectivev3
 !default.perspectivev3
 xcuserdata
+
+## Other
 *.xccheckout
 *.moved-aside
-DerivedData
+*.xcuserstate
+*.xcscmblueprint
+
+## Obj-C/Swift specific
 *.hmap
 *.ipa
-*.xcuserstate
-project.xcworkspace
 
-# Android/IJ
+# CocoaPods
 #
-*.iml
-.idea
-.gradle
-local.properties
-
-# node.js
+# We recommend against adding the Pods directory to your .gitignore. However
+# you should judge for yourself, the pros and cons are mentioned at:
+# https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
-node_modules/
-npm-debug.log
+# Pods/
 
-# BUCK
-buck-out/
-\.buckd/
-android/app/libs
-android/keystores/debug.keystore
+# Carthage
+#
+# Add this line if you want to avoid checking in source code from Carthage dependencies.
+# Carthage/Checkouts
+
+Carthage/Build
+
+# fastlane
+#
+# It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
+# screenshots whenever they are needed.
+# For more information about the recommended setup visit:
+# https://github.com/fastlane/fastlane/blob/master/docs/Gitignore.md
+
+fastlane/report.xml
+fastlane/screenshots
+
+node_modules/**/*
+
+# Android
+android/.idea/
+android/gradle/
+android/.gradle
+android/gradlew
+android/gradlew.bat
+android/local.properties
+.buckconfig
+.flowconfig
+.watchmanconfig
+.idea/ShowLocationServicesDialogBox.iml
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/workspace.xml
+android/.gradle/
