--- a/.npmignore
+++ b/.npmignore
@@ -1,9 +1,10 @@
 android/.idea/
 android/gradle/
-android/.gradle
+android/.gradle/
 android/gradlew
 android/gradlew.bat
 android/local.properties
 .buckconfig
 .flowconfig
 .watchmanconfig
+.idea/
