--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-android-location-services-dialog-box",
   "version": "1.0.0",
-  "description": "A react-native component for Google AdMob banners and interstitials",
+  "description": "A react-native component for android location services enabled dialog box",
   "author": "webyonet <webyonet@hotmail.com>",
   "main": "index.js",
   "license": "MIT",
