--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-android-location-services-dialog-box",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "A react-native component for turn on the dialog box from android location services",
   "author": "webyonet <webyonet@hotmail.com>",
   "main": "index.js",
@@ -8,5 +8,20 @@
   "repository": {
     "type": "git",
     "url": "git@github.com:webyonet/react-native-android-location-services-dialog-box.git"
+  },
+  "keywords": [
+    "react-component",
+    "react-native",
+    "android",
+    "android-location-services",
+    "geo-location",
+    "location-services",
+    "geo-location-dialog-box",
+    "location-services-dialog-box",
+    "react-native-location-services",
+    "react-native-location-services-dialog-box"
+  ],
+  "peerDependencies": {
+    "react-native": "^0.14.2"
   }
 }
