--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "react-native-location-services-dialog-box"
   ],
   "peerDependencies": {
-    "react-native": "^0.35.0"
+    "react-native": ">= 0.30.0"
   }
 }
