--- a/package.json
+++ b/package.json
@@ -22,6 +22,14 @@
     "react-native-location-services-dialog-box"
   ],
   "peerDependencies": {
-    "react-native": ">= 0.56.0"
+    "react-native": ">= 0.68.0"
+  },
+  "codegenConfig": {
+    "name": "LocationServicesDialogBoxSpec",
+    "type": "modules",
+    "jsSrcsDir": ".",
+    "android": {
+      "javaPackageName": "com.showlocationservicesdialogbox"
+    }
   }
 }
